test fix z-index

--- a/access/css/main.css
+++ b/access/css/main.css
@@ -42,7 +42,6 @@ body{
     top: 0;
     right: 0;
     left: 0;
-    z-index: 100;
 }
 .cd-info{
     text-align: center;
@@ -205,14 +204,12 @@ input[type="range"] {
 .song.active {
     color: rgb(39, 93, 192);
     background-image: linear-gradient(90deg, #000, transparent);
-    animation: activeSong 2s linear infinite;
-    position: relative;
-    z-index: 0;
+    /* animation: activeSong 2s linear infinite; */
 }
 .song.active .author{
     color: rgb(49, 69, 105);
 }
-@keyframes activeSong {
+/* @keyframes activeSong {
     0% {
         transform: translate(0, 0);
     }
@@ -222,4 +219,4 @@ input[type="range"] {
     100% {
         transform: translate(0, 0);
     }
-}
+} */
